# calculator-tauri

./: .gitignore  index.html  package-lock.json  package.json  script.js  styles.css
.github/workflows/: build.yml  dev-build.yml  test-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
